[package]
name = "duoalert_oxide"
version = "0.8.0"
authors = ["parkcitymedia <blakemichaelgaynor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# TODO: publish this badboy at some point
duolingo_rs = { git = "https://github.com/parkcitymedia/duolingo_rs", branch="main"}

# async dep
tokio = { version = "1.0", features = ["full"] }

# serialization & data manipulation
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1.5"

#reqwest = "0.11"
reqwest = {version = "0.11", features = ["json","cookies"]}

# logging/datetime
# chrono = {version = "0.4"}
