[package]
name = "duoalert_oxide"
default-run = "duoalert_oxide"
version = "0.8.3"
authors = ["parkcitymedia <blakemichaelgaynor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "duoalert_oxide"
path = "src/main.rs"

[dependencies]
duolingo_rs = "0.2.4"
tokio = { version = "1.0", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1.5"
reqwest = {version = "0.11", features = ["json","cookies"]}